# packages/core/openapi.json
@@ -444,6 +444,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -1262,6 +1264,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -2080,6 +2084,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -2222,6 +2228,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -2412,6 +2420,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -2912,6 +2922,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -3089,6 +3101,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -3266,6 +3280,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -3456,6 +3472,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -3687,6 +3705,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -4039,6 +4059,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -4361,6 +4383,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -4519,6 +4543,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -4651,6 +4677,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -4822,6 +4850,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -5001,6 +5031,7 @@
                     "state": {
                       "type": "string",
                       "enum": [
+                        "CHECKING",
                         "VALID",
                         "INVALID"
                       ]
@@ -5110,6 +5141,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -5218,6 +5251,7 @@
                           "state": {
                             "type": "string",
                             "enum": [
+                              "CHECKING",
                               "VALID",
                               "INVALID"
                             ]
@@ -5463,6 +5497,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -5571,6 +5607,7 @@
                           "state": {
                             "type": "string",
                             "enum": [
+                              "CHECKING",
                               "VALID",
                               "INVALID"
                             ]
@@ -5816,6 +5853,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -5975,6 +6014,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6371,6 +6412,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6435,7 +6478,8 @@
                       "tasks_create_enabled",
                       "claims_enabled",
                       "settlement_enabled",
-                      "public_evidence_enabled"
+                      "public_evidence_enabled",
+                      "external_review_enabled"
                     ]
                   },
                   "value": {
@@ -6496,6 +6540,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6601,6 +6647,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6706,6 +6754,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6811,6 +6861,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -6916,6 +6968,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
@@ -7021,6 +7075,8 @@
                             "WORKER_NOT_ELIGIBLE",
                             "TASK_EXPIRED",
                             "CLAIM_NOT_ACTIVE",
+                            "REVIEW_PENDING",
+                            "SUBMISSION_NOT_PENDING",
                             "NONCE_INVALID",
                             "NONCE_USED",
                             "NONCE_EXPIRED",
